--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
       - run: mvn integration-test cobertura:cobertura
 
       - store_test_results:
-          path: target/surefire-reports
+          path: spring5-mvc-rest/target/surefire-reports
 
       - run:
           name: Send to CodeCov
