Security: permit H2 console access

--- a/spring5-mvc-rest/src/main/resources/application.yml
+++ b/spring5-mvc-rest/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   # Pretty-print JSON responses
   jackson:
     serialization.INDENT_OUTPUT: true
-  security:
-    user:
-      name: admin
-      password: password
+#  security:
+#    user:
+#      name: admin
+#      password: password
